# hailort-LightNet

./: .gitignore  CMakeLists.txt  README.md
include/: #utils.hpp#  colormap.hpp  config_parser.hpp  lightnet.hpp
src/: colormap.cpp  config_parser.cpp  hailort_lightnet.cpp  lightnet.cpp
